# libpqmxx

./: CMakeLists.txt  libpqmxx.vcxproj  libpqmxx.vcxproj.filters
include/: postgres-result.h
lib/: libpqmxx.lib  libpqmxxd.lib
lib/x64/: libpqmxx.lib  libpqmxxd.lib
src/: postgres-result.cpp
